@@ -60,6 +60,10 @@ proc do_test { detach_on_fork } {
 
     gdb_test "info threads" "No threads\." \
 	"no threads left"
+
+    gdb_test "info inferiors" \
+	"Num\[ \t\]+Description\[ \t\]+Executable\[ \t\]+\r\n\\* 1 \[^\r\n\]+" \
+	"only inferior 1 left"
 }
 
 foreach detach_on_fork {"on" "off"} {
